Fix Lang Alignment in Lang file

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,93 +1,92 @@
-item.contenttweaker.woodgear.name= Wooden Gear
-item.contenttweaker.hammer.name= Hammer
-item.contenttweaker.bulatsteeldust.name= Bulat Steel Dust
-item.contenttweaker.bulatsteelingot.name= Bulat Steel Ingot
-item.contenttweaker.stretchedwool.name= Stretched Wool
-item.contenttweaker.unfiredfireclaybrick.name= Unfired Fireclay Brick
-item.contenttweaker.stoneknife.name= Stone Knife
-item.contenttweaker.electricalsteelplate.name= Electrical Steel Plate
-item.contenttweaker.silversteel.name= Silver Steel
-item.contenttweaker.electricalsteelgear.name= Electrical Steel Gear
-item.contenttweaker.silversteelgear.name= Silver Steel Gear
-item.contenttweaker.silversteelplate.name= Silver Steel Plate
-item.contenttweaker.bulatsteelgear.name= Bulat Steel Gear
-item.contenttweaker.bulatsteelplate.name= Bulat Steel Plate
-item.contenttweaker.silversteeldust.name= Silver Steel Dust
-item.contenttweaker.silversteelrod.name= Silver Steel Rod
-item.contenttweaker.bulatsteelrod.name= Bulat Steel Rod
-item.contenttweaker.electricalsteelrod.name= Electrical Steel Rod
-item.contenttweaker.Wrench.name= Wrench
-item.contenttweaker.longbulatsteelrod.name= Long Bulat Steel Rod
-item.contenttweaker.longsilversteelrod.name= Long Silver Steel Rod
-item.contenttweaker.longelectricalsteelrod.name= Long Electrical Steel Rod
-item.contenttweaker.advancedalloygear.name= Advanced Alloy Gear
-item.contenttweaker.lasercrystal.name= Laser Crystal
-item.contenttweaker.lasermodule.name= Laser Module
+item.contenttweaker.woodgear.name=Wooden Gear
+item.contenttweaker.hammer.name=Hammer
+item.contenttweaker.bulatsteeldust.name=Bulat Steel Dust
+item.contenttweaker.bulatsteelingot.name=Bulat Steel Ingot
+item.contenttweaker.stretchedwool.name=Stretched Wool
+item.contenttweaker.unfiredfireclaybrick.name=Unfired Fireclay Brick
+item.contenttweaker.stoneknife.name=Stone Knife
+item.contenttweaker.electricalsteelplate.name=Electrical Steel Plate
+item.contenttweaker.silversteel.name=Silver Steel
+item.contenttweaker.electricalsteelgear.name=Electrical Steel Gear
+item.contenttweaker.silversteelgear.name=Silver Steel Gear
+item.contenttweaker.silversteelplate.name=Silver Steel Plate
+item.contenttweaker.bulatsteelgear.name=Bulat Steel Gear
+item.contenttweaker.bulatsteelplate.name=Bulat Steel Plate
+item.contenttweaker.silversteeldust.name=Silver Steel Dust
+item.contenttweaker.silversteelrod.name=Silver Steel Rod
+item.contenttweaker.bulatsteelrod.name=Bulat Steel Rod
+item.contenttweaker.electricalsteelrod.name=Electrical Steel Rod
+item.contenttweaker.Wrench.name=Wrench
+item.contenttweaker.longbulatsteelrod.name=Long Bulat Steel Rod
+item.contenttweaker.longsilversteelrod.name=Long Silver Steel Rod
+item.contenttweaker.longelectricalsteelrod.name=Long Electrical Steel Rod
+item.contenttweaker.advancedalloygear.name=Advanced Alloy Gear
+item.contenttweaker.lasercrystal.name=Laser Crystal
+item.contenttweaker.lasermodule.name=Laser Module
 fluid.blackfluid=Black Fluid
-item.contenttweaker.goodcircuit.name= Good Circuit
-item.contenttweaker.catalyst.name= Catalyst
+item.contenttweaker.goodcircuit.name=Good Circuit
+item.contenttweaker.catalyst.name=Catalyst
 fluid.lumin=Lumin
-item.contenttweaker.silveralloyingot.name= Silver Alloy Ingot
-item.contenttweaker.silveralloyplate.name= Silver Alloy Plate
-item.contenttweaker.blazingrod.name= Blazing Rod
-item.contenttweaker.bronzeelectrontube.name= Bronze Electron Tube
+item.contenttweaker.silveralloyingot.name=Silver Alloy Ingot
+item.contenttweaker.silveralloyplate.name=Silver Alloy Plate
+item.contenttweaker.blazingrod.name=Blazing Rod
+item.contenttweaker.bronzeelectrontube.name=Bronze Electron Tube
 fluid.bisphenolb=Bisphenol B
-item.contenttweaker.vibrantcircuit.name= Vibrant Circuit
-item.contenttweaker.supercooleddust.name= Super Cooled Dust
-item.contenttweaker.rubyingot.name= Ruby Ingot
-item.contenttweaker.supercooledingot.name= Super Cooled Ingot
-item.contenttweaker.supercooledplate.name= Super Cooled Plate
-item.contenttweaker.bulatfiberreinforcedcircuitboard.name= Bulat Fiber-Reinforced Circuitboard
+item.contenttweaker.vibrantcircuit.name=Vibrant Circuit
+item.contenttweaker.supercooleddust.name=Super Cooled Dust
+item.contenttweaker.rubyingot.name=Ruby Ingot
+item.contenttweaker.supercooledingot.name=Super Cooled Ingot
+item.contenttweaker.supercooledplate.name=Super Cooled Plate
+item.contenttweaker.bulatfiberreinforcedcircuitboard.name=Bulat Fiber-Reinforced Circuitboard
 fluid.ic2coolant=IC2 Coolant
-item.contenttweaker.bisphenolbingot.name= Bisphenol-B Ingot
-item.contenttweaker.bisphenolbsheet.name= Bisphenol-B Sheet
-item.contenttweaker.bisphenolbdust.name= Bisphenol-B Dust
+item.contenttweaker.bisphenolbingot.name=Bisphenol-B Ingot
+item.contenttweaker.bisphenolbsheet.name=Bisphenol-B Sheet
+item.contenttweaker.bisphenolbdust.name=Bisphenol-B Dust
 fluid.tetraethylene=Tetra Ethylene
-item.contenttweaker.hotvibrantalloyingot.name= Hot Vibrant Alloy Ingot
-item.contenttweaker.vibrantalloyplate.name= Vibrant Alloy Plate
-item.contenttweaker.nichromerichblend.name= Nichrome Rich Blend
-item.contenttweaker.heavydutyalloyt1.name= Heavy Duty Alloy T1
-item.contenttweaker.titaniumtetrachloridedust.name= Solidified Titanium Tetrachloride
-item.contenttweaker.heavydutyalloyt2.name= Heavy Duty Alloy T2
-item.contenttweaker.hotplatinumingot.name= Hot Platinum Ingot
+item.contenttweaker.hotvibrantalloyingot.name=Hot Vibrant Alloy Ingot
+item.contenttweaker.vibrantalloyplate.name=Vibrant Alloy Plate
+item.contenttweaker.heavydutyalloyt1.name=Heavy Duty Alloy T1
+item.contenttweaker.titaniumtetrachloridedust.name=Solidified Titanium Tetrachloride
+item.contenttweaker.heavydutyalloyt2.name=Heavy Duty Alloy T2
+item.contenttweaker.hotplatinumingot.name=Hot Platinum Ingot
 fluid.moltenpulsatingiron=Molten Pulsating Iron
-item.contenttweaker.heavydutyalloyt3.name= Heavy Duty Alloy T3
-item.contenttweaker.keyboard.name= Keyboard
-item.contenttweaker.manatitaniumprocesser.name= Mana Titanium Processor
-item.contenttweaker.titaniumcircuit.name= Printed Titanium Circuit
-item.contenttweaker.hssgcircuit.name= Printed HSS-G Circuit
-item.contenttweaker.osmiridiumcircuit.name= Printed Osmiridium Circuit
-item.contenttweaker.tritaniumcircuit.name= Printed Tritanium Circuit
-item.contenttweaker.tungstencircuit.name= Printed Tungsten Circuit
-item.contenttweaker.greensteelingot.name= Green Steel Ingot
-item.contenttweaker.greensteeldust.name= Green Steel Dust
-item.contenttweaker.greensteelplate.name= Green Steel Plate
-item.contenttweaker.greensteelrod.name= Green Steel Rod
-tile.contenttweaker.titaniumcontainingice.name= Titanium Containing Ice
-item.contenttweaker.heavydutyalloyt4.name= Heavy Duty Alloy T4
-tile.contenttweaker.platinumsaltore.name= Dense Platinum Salt Ore
-item.contenttweaker.cryolitedust.name= Cryolite Dust
-tile.contenttweaker.cryoliteore.name= Cryolite Ore
-item.contenttweaker.energeticblend.name= Energetic Blend
+item.contenttweaker.heavydutyalloyt3.name=Heavy Duty Alloy T3
+item.contenttweaker.keyboard.name=Keyboard
+item.contenttweaker.manatitaniumprocesser.name=Mana Titanium Processor
+item.contenttweaker.titaniumcircuit.name=Printed Titanium Circuit
+item.contenttweaker.hssgcircuit.name=Printed HSS-G Circuit
+item.contenttweaker.osmiridiumcircuit.name=Printed Osmiridium Circuit
+item.contenttweaker.tritaniumcircuit.name=Printed Tritanium Circuit
+item.contenttweaker.tungstencircuit.name=Printed Tungsten Circuit
+item.contenttweaker.greensteelingot.name=Green Steel Ingot
+item.contenttweaker.greensteeldust.name=Green Steel Dust
+item.contenttweaker.greensteelplate.name=Green Steel Plate
+item.contenttweaker.greensteelrod.name=Green Steel Rod
+tile.contenttweaker.titaniumcontainingice.name=Titanium Containing Ice
+item.contenttweaker.heavydutyalloyt4.name=Heavy Duty Alloy T4
+tile.contenttweaker.platinumsaltore.name=Dense Platinum Salt Ore
+item.contenttweaker.cryolitedust.name=Cryolite Dust
+tile.contenttweaker.cryoliteore.name=Cryolite Ore
+item.contenttweaker.energeticblend.name=Energetic Blend
 fluid.dietoxythiophene=Dietoxythiophene
-tile.contenttweaker.electroniccasing.name= Electronic Casing
-tile.contenttweaker.mattercasing.name= Matter Casing
-tile.contenttweaker.computercasing.name= Computer Casing
-tile.contenttweaker.advcomputercasing.name= Advanced Computer Casing
-tile.contenttweaker.highpowercasing.name= High Power Casing
-item.contenttweaker.woodeningotmold.name= Wooden Ingot Mold
-item.contenttweaker.elementDs.name= Dark Steel Element
-item.contenttweaker.elementFm.name= Fermium Element
-item.contenttweaker.elementLu.name= Lumium Element
-item.contenttweaker.elementTi.name= Titanium Element
-item.contenttweaker.elementTr.name= Tritanium Element
-item.contenttweaker.elementW.name= Tungsten Element
-item.contenttweaker.sElementTs.name= Titanium Steel SuperElement
-item.contenttweaker.sElementP.name= Pedot SuperElement
-item.contenttweaker.resonantseaborgiumdust.name= Resonant Seaborgium Dust
-item.contenttweaker.hotresonantseaborgiumingot.name= Hot Resonant Seaborgium Ingot
-item.contenttweaker.resonantseaborgiumingot.name= Resonant Seaborgium Ingot
-tile.contenttweaker.cryogeniccasing.name= Cryogenic Casing
+tile.contenttweaker.electroniccasing.name=Electronic Casing
+tile.contenttweaker.mattercasing.name=Matter Casing
+tile.contenttweaker.computercasing.name=Computer Casing
+tile.contenttweaker.advcomputercasing.name=Advanced Computer Casing
+tile.contenttweaker.highpowercasing.name=High Power Casing
+item.contenttweaker.woodeningotmold.name=Wooden Ingot Mold
+item.contenttweaker.elementDs.name=Dark Steel Element
+item.contenttweaker.elementFm.name=Fermium Element
+item.contenttweaker.elementLu.name=Lumium Element
+item.contenttweaker.elementTi.name=Titanium Element
+item.contenttweaker.elementTr.name=Tritanium Element
+item.contenttweaker.elementW.name=Tungsten Element
+item.contenttweaker.sElementTs.name=Titanium Steel SuperElement
+item.contenttweaker.sElementP.name=Pedot SuperElement
+item.contenttweaker.resonantseaborgiumdust.name=Resonant Seaborgium Dust
+item.contenttweaker.hotresonantseaborgiumingot.name=Hot Resonant Seaborgium Ingot
+item.contenttweaker.resonantseaborgiumingot.name=Resonant Seaborgium Ingot
+tile.contenttweaker.cryogeniccasing.name=Cryogenic Casing
 fluid.cryogeniccoolant=Cryogenic Coolant
 fluid.moltenresonantseaborgium=Molten Resonant Seaborgium
 fluid.moltenmodularium=Molten Modularium
@@ -97,16 +96,16 @@ fluid.highlycomplicatedcosmicrubber=Highly Complicated Cosmic Rubber
 item.contenttweaker.crystaltinebaseingot.name=Crystaltine Base Ingot
 fluid.moltenemerald=Molten Emerald
 tile.contenttweaker.refabricateddraconiumore.name=Refabricated Draconium Ore
-item.contenttweaker.instablematter.name= Unstable Matter
-item.contenttweaker.stablematter.name= Stable Matter
-item.contenttweaker.elementdr.name= Draconium Element
+item.contenttweaker.instablematter.name=Unstable Matter
+item.contenttweaker.stablematter.name=Stable Matter
+item.contenttweaker.elementdr.name=Draconium Element
 fluid.pvtchs=Metastable SuperHeavy Solution
 item.contenttweaker.engine.name=Electrum Engine
 item.contenttweaker.draconiumfragment.name=Draconium Fragment
 item.contenttweaker.diamondaluminiumcasing.name=Diamond-Aluminium Casing
-item.contenttweaker.compressedironnugget.name= Compressed Iron Nugget
+item.contenttweaker.compressedironnugget.name=Compressed Iron Nugget
 fluid.moltenvibrantalloy=Molten Vibrant Alloy
-tile.contenttweaker.advancedcraftingunit.name= Advanced Crafting Unit
+tile.contenttweaker.advancedcraftingunit.name=Advanced Crafting Unit
 item.contenttweaker.hotplatinumtitaniumingot.name=Hot Platinum Titanium Ingot
 item.contenttweaker.hotsoulariumingot.name=Hot Soularium Ingot
 item.contenttweaker.soulariummetallicpowder.name=Soularium Metallic Powder
@@ -124,15 +123,15 @@ item.contenttweaker.itemprocessorcoret2.name=Item Processor Core T2
 item.contenttweaker.itemprocessorcoret3.name=Item Processor Core T3
 item.contenttweaker.radiationproofplate.name=Radiation Proof Plate
 item.contenttweaker.wrappeduraniumingot.name=Wrapped Uranium Ingot
-item.contenttweaker.graphiteuraniummixturedust.name= Graphite-Uranium Mixture Dust
+item.contenttweaker.graphiteuraniummixturedust.name=Graphite-Uranium Mixture Dust
 item.contenttweaker.hotatomicseperationcatalyst.name=Hot Atomic Seperation Catalyst
 item.contenttweaker.rawatomicsperationcatalyst.name=Raw Atomic Seperation Catalyst
 item.contenttweaker.advancedradiationproofplate.name=Advanced Radiation Proof Plate
-item.contenttweaker.hicomputationstationmk1.name= Hi-Computation Station MK-I
-item.contenttweaker.hicomputationstationmk2.name= Hi-Computation Station MK-II
-item.contenttweaker.hicomputationstationmk3.name= Hi-Computation Station MK-III
-item.contenttweaker.hicomputationstationmk4.name= Hi-Computation Station MK-IV Prototype
-item.contenttweaker.hicomputationstationmk5.name= Hi-Computation Station MK-V FinalType
+item.contenttweaker.hicomputationstationmk1.name=Hi-Computation Station MK-I
+item.contenttweaker.hicomputationstationmk2.name=Hi-Computation Station MK-II
+item.contenttweaker.hicomputationstationmk3.name=Hi-Computation Station MK-III
+item.contenttweaker.hicomputationstationmk4.name=Hi-Computation Station MK-IV Prototype
+item.contenttweaker.hicomputationstationmk5.name=Hi-Computation Station MK-V FinalType
 item.contenttweaker.hotmarcem200steelingot.name=Hot MAR-Ce-M200 Steel Ingot
 item.contenttweaker.microheater.name=Micro-Heater
 item.contenttweaker.hothikariumingot.name=Hot Hikarium Ingot
@@ -141,8 +140,8 @@ item.contenttweaker.highdensityplutoniumnugget.name=High Density Plutonium Nugge
 item.contenttweaker.highdensityplutonium.name=High Density Plutonium
 fluid.plutoniumbasedliquidfuel=Plutonium Based Liquid Fuel
 fluid.plutoniumbasedliquidfuele=Plutonium Based Liquid Fuel (Excited State)
-tile.contenttweaker.neutronsensor.name= Neutron Sensor
-tile.contenttweaker.neutronaccelerator.name= Neutron Accelerator
+tile.contenttweaker.neutronsensor.name=Neutron Sensor
+tile.contenttweaker.neutronaccelerator.name=Neutron Accelerator
 tile.contenttweaker.perciseelectronicunitcasing.name=Precise Electronic Unit Casing
 fluid.sodiumchloride=Sodium Chloride
 fluid.borontrioxide=Boron Trioxide
@@ -161,9 +160,9 @@ item.contenttweaker.naquadacoil.name=Naquadah Coil
 item.contenttweaker.naquadaalloycoil.name=Naquadah Alloy Coil
 item.contenttweaker.superconductingcoil.name=Superconducting Coil
 item.contenttweaker.biocells.name=Bio Cells
-item.contenttweaker.engravedenergychip.name= Engraved Energy Chip
-item.contenttweaker.engravedgoldchip.name= Engraved Gold Chip
-item.contenttweaker.engravedmanyiullynchip.name= Engraved Manyullyn Chip
+item.contenttweaker.engravedenergychip.name=Engraved Energy Chip
+item.contenttweaker.engravedgoldchip.name=Engraved Gold Chip
+item.contenttweaker.engravedmanyiullynchip.name=Engraved Manyullyn Chip
 item.contenttweaker.highdensityuranium.name=High Density Uranium
 item.contenttweaker.highdensityuraniumnugget.name=High Density Uranium Nugget
 fluid.uraniumbasedliquidfuel=Uranium Based Fuel
@@ -321,10 +320,10 @@ item.contenttweaker.trappist1e.name=Trappist 1E
 item.contenttweaker.cupbase.name=Cup Base
 item.contenttweaker.cupholder.name=Cup Holder
 item.contenttweaker.tiedhay.name=Tied Hay
-tile.contenttweaker.electricalrutherfordiumcupritecasing.name= Electrical Rutherfordium Cuprite Casing
+tile.contenttweaker.electricalrutherfordiumcupritecasing.name=Electrical Rutherfordium Cuprite Casing
 multiblocktweaker.machine.hyper_chemical_plant.name=Hyper Chemical Plant
 multiblocktweaker.multiblock.hyper_chemical_plant.description=The Hyper Chemical Plant is a more advanced varient of the chemical plant, it is used in late game circuit progression and some minor gates
-item.contenttweaker.hotincoloy945xingot.name= Hot Incoloy 945X Ingot
+item.contenttweaker.hotincoloy945xingot.name=Hot Incoloy 945X Ingot
 tile.contenttweaker.particleprotectioncasing.name=Particle Protection Casing
 recipemap.hyper_chemical_plant.name=Hyper Chemical Plant
 recipemap.molecular_transformer.name=Molecular Transformer
@@ -345,7 +344,7 @@ recipemap.quantumcircuitassembler.name=Quantum Circuit Assembler
 multiblocktweaker.machine.quantumcircuitassembler.name=Quantum Circuit Assembler
 multiblocktweaker.multiblock.quantumcircuitassembler.description=The  Quantum Circuit Assembler
 devtech.machine.fisher.name=Fisher
-item.contenttweaker.flintstiffednet.name= Flint Stiffed Fishing Net
+item.contenttweaker.flintstiffednet.name=Flint Stiffed Fishing Net
 item.contenttweaker.aluminiumreinforcednet.name=Aluminium Reinforced Fishing Net
 item.contenttweaker.europiumdopednet.name=Europium Doped Fishing Net
 item.contenttweaker.sterilizedeuropiumnet.name=Sterilized Europium Fishing Net
@@ -1664,3 +1663,5 @@ fluid.sulfuric_kerosene=Sulfuric Kerosene
 fluid.nonoxynol-9=Nonoxynol-9
 fluid.ethoxylated_nonylphenol=Ethoxylated Nonylphenol
 fluid.nonoxynol-9_solution=Nonoxynol-9 Solution
+item.contenttweaker.drone_pad.name=Drone Landing Pad
+item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
