--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1665,3 +1665,4 @@ fluid.ethoxylated_nonylphenol=Ethoxylated Nonylphenol
 fluid.nonoxynol-9_solution=Nonoxynol-9 Solution
 item.contenttweaker.drone_pad.name=Drone Landing Pad
 item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
+recipemap.enzymatic_hydrolisis_tank=Enzymatic Hydrolisis Tank
