En Us Localization

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1666,3 +1666,10 @@ fluid.nonoxynol-9_solution=Nonoxynol-9 Solution
 item.contenttweaker.drone_pad.name=Drone Landing Pad
 item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
 recipemap.enzymatic_hydrolisis_tank=Enzymatic Hydrolisis Tank
+item.contenttweaker.platinum_desh_tungstensteel_compressed_plate.name=Platinum Desh Tungstensteel Compressed Plate
+recipemap.rocket_three.name=T3 Rocket
+multiblocktweaker.machine.rocket_three.name=T3 Rocket
+item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
+item.contenttweaker.patterned_sapphire_substrate.name=Patterned Sapphire Substrate
+item.contenttweaker.etched_sapphire_substrate.name=Etched Sapphire Substrate
+item.contenttweaker.raw_high_power_ic_wafer.name=Raw High Power IC Wafer
