remove Matter Dissolver

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1566,13 +1566,13 @@ devtech.machine.electron_beam.ev.name=Advanced Electron Unit III
 devtech.machine.electron_beam.iv.name=Elite Electron Unit
 multiblocktweaker.machine.manufactory.name=Manufactory
 recipemap.manufactory.name=Manufactory
-item.contenttweaker.raw_power_ic_wafer.name=Raw Power IC Wafer
+item.contenttweaker.raw_power_ic_wafer.name=Doped Power IC Wafer
 item.contenttweaker.engraved_power_ic_wafer.name=Engraved Power IC Wafer
 item.contenttweaker.ram_lithography_mask.name=Ram Lithography Mask
 item.contenttweaker.engraved_ram_wafer.name=Engraved Ram Wafer
-item.contenttweaker.raw_ram_wafer.name=Raw Ram Wafer
+item.contenttweaker.raw_ram_wafer.name=Doped Ram Wafer
 item.contenttweaker.engraved_cpu_wafer.name=Engraved CPU Wafer
-item.contenttweaker.raw_cpu_wafer.name=Raw CPU Wafer
+item.contenttweaker.raw_cpu_wafer.name=Doped CPU Wafer
 item.contenttweaker.cpu_lithography_mask.name=CPU Lithography Mask
 item.contenttweaker.lpic_lithography_mask.name=Low-Power IC Lithography Mask
 fluid.two_butene=2-Butene
@@ -1672,4 +1672,24 @@ multiblocktweaker.machine.rocket_three.name=T3 Rocket
 item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
 item.contenttweaker.patterned_sapphire_substrate.name=Patterned Sapphire Substrate
 item.contenttweaker.etched_sapphire_substrate.name=Etched Sapphire Substrate
-item.contenttweaker.raw_high_power_ic_wafer.name=Raw High Power IC Wafer
+item.contenttweaker.raw_high_power_ic_wafer.name=Doped High Power IC Wafer
+tile.contenttweaker.drone_pad.name=Drone Pad
+item.contenttweaker.drone.name=Drone
+tile.contenttweaker.t3_rocket_engine.name=T3 Rocket Engine
+tile.contenttweaker.advanced_stabilization_fin.name=Advanced Stabilization Fin
+tile.contenttweaker.advanced_rocket_thrusther.name=Advanced Rocket Thruster
+tile.contenttweaker.advanced_outer_protective_wall.name=Advanced Outer Protective Wall
+item.contenttweaker.engraved_ic_wafer.name=Engraved IC Wafer
+item.contenttweaker.raw_ic_wafer.name=Doped IC Wafer
+item.contenttweaker.integrated_circuit_photolithography_mask.name=Integrated Circuit Lithogrpahy Mask
+devtech.machine.cvd_unit_s.lv.name=Basic CVD Unit
+devtech.machine.cvd_unit_s.mv.name=Advanced CVD Unit
+devtech.machine.cvd_unit_s.hv.name=Advanced CVD Unit II
+devtech.machine.cvd_unit_s.ev.name=Advanced CVD Unit III
+devtech.machine.cvd_unit_s.iv.name=Elite CVD Unit
+devtech.machine.cvd_unit_s.luv.name=Elite CVD Unit II
+devtech.machine.cvd_unit_s.zpm.name=Elite CVD Unit III 
+devtech.machine.cvd_unit_s.uv.name=Ultimate CVD Unit
+recipemap.cvd_unit_s.name=Continous Vapor Deposition 
+item.contenttweaker.hafnium_platinum_titanium_ingot.name=Hafnium Platinum Titanium Ingot
+item.contenttweaker.hafnium_platinum_titanium_plate.name=Hafnium Platinum Titanium Plate
