new Items and Lang

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1693,3 +1693,34 @@ devtech.machine.cvd_unit_s.uv.name=Ultimate CVD Unit
 recipemap.cvd_unit_s.name=Continous Vapor Deposition 
 item.contenttweaker.hafnium_platinum_titanium_ingot.name=Hafnium Platinum Titanium Ingot
 item.contenttweaker.hafnium_platinum_titanium_plate.name=Hafnium Platinum Titanium Plate
+tile.contenttweaker.advanced_rocket_thruster.name=Advanced Rocket Thruster
+item.contenttweaker.n_doped_silicon_dioxde_wafer.name=N-Doped Silicon Dioxide Wafer
+item.contenttweaker.polysilicon_wafer.name=Polysilicon Wafer
+item.contenttweaker.doped_polysilicon_wafer.name=Doped Polysilicon Wafer
+item.contenttweaker.biowarecoolingunit.name=Bioware Cooling Unit
+item.contenttweaker.silicon_dioxide_wafer.name=Silicon Dioxide Wafer
+item.contenttweaker.wrench.name=Wrench
+item.contenttweaker.nanocpu_lithography_mask.name=Nano CPU Lithography Mask
+item.contenttweaker.engraved_nanocpu_wafer.name=Engraved Nano CPU Wafer
+item.contenttweaker.doped_nanocpu_wafer.name=Doped Nano CPU Wafer
+item.contenttweaker.gated_nanocpu_wafer.name=Gated Nano CPU Wafer
+item.contenttweaker.insulated_nanocpu_wafer.name=Insulated Nano CPU Wafer
+item.contenttweaker.trenched_insulated_nanocpu_wafer.name=Trenched Insulated Nano CPU Wafer
+item.contenttweaker.unplanarized_nanocpu_wafer.name=Unplanarized Nano CPU Wafer
+multiblocktweaker.machine.drone_pad.name=Drone Pad 
+recipemap.drone_pad.name=Drone Pad
+metaitem.roasted_deshite.name=Roasted Deshite Dust
+metaitem.evaporated_deshite_compound.name=Evaporated Deshite Compound
+metaitem.silver_bromide.name=Silver Bromide Dust
+metaitem.hafnium_platinum_titanium_composite.name=Hafnium Titanium Composite
+fluid.draconium_mother_liqour=Draconium Mother Liqour
+fluid.very_hot_argon=Very Hot Argon
+fluid.platinum_extract=Platinum Extract
+fluid.palladium_extract=Palladium Extract
+fluid.platinum_extraction_mixture=Platinum Extraction Mixutre
+fluid.draconium_extraction_mixture=Draconium Extraction Mixture
+fluid.palladium_mother_liqour=Palladium Mother Liqour
+fluid.draconium_extract=Draconium Extract
+fluid.platinum_solution=Platinum Solution
+fluid.desulfurized_deshite_compound=Desulfurized Deshite Compound
+
