--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1723,4 +1723,21 @@ fluid.palladium_mother_liqour=Palladium Mother Liqour
 fluid.draconium_extract=Draconium Extract
 fluid.platinum_solution=Platinum Solution
 fluid.desulfurized_deshite_compound=Desulfurized Deshite Compound
+item.contenttweaker.n_doped_silicon_dioxide_wafer.name=N-Doped Silicon Dioxide Wafer
+item.contenttweaker.nor_photolithography_mask.name=NOR Photolithography Mask
+item.contenttweaker.nand_photolithography_mask.name=NAND Photolithography Mask
+item.contenttweaker.nickel_nitride_wafer.name=Nickel Nitride Wafer
+item.contenttweaker.engraved_nor_wafer.name=Engraved NOR Wafer
+item.contenttweaker.engraved_nand_wafer.name=Engraved NAND Wafer
+item.contenttweaker.flerovium_layerd_wafer.name=Flerovium Layered Wafer
+item.contenttweaker.spinorial_memory_wafer.name=Spinorial Memory Wafer
+item.contenttweaker.pre_engraved_nqo2_wafer.name=Pre-Engraved NqO2 Wafer
+item.contenttweaker.enriched_naquadah_photlithography_mask.name=Enriched Naquadah Photolithography Mask
+item.contenttweaker.raw_asoc_wafer.name=Raw ASoC Wafer
+item.contenttweaker.engraved_asoc_wafer.name=Engraved ASoC Wafer
+item.contenttweaker.doped_aram_wafer.name=Doped ARAM Wafer
+fluid.very_hot_krypton=Very Hot Krypton
+fluid.trichloroflerane=Trichloroflerane
+fluid.chloronaquadic_acid=Chloronaquadic Acid
+fluid.very_hot_aqua_regia=Very Hot Aqua Regia
 
