--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1740,4 +1740,5 @@ fluid.very_hot_krypton=Very Hot Krypton
 fluid.trichloroflerane=Trichloroflerane
 fluid.chloronaquadic_acid=Chloronaquadic Acid
 fluid.very_hot_aqua_regia=Very Hot Aqua Regia
+item.contenttweaker.engraved_spinorial_memory_wafer.name=Engraved Spinorial Memory Wafer
 
