--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1155,7 +1155,7 @@ recipemap.large_rock_breaker.name=Rock Breaking
 recipemap.roaster.name=Roasting
 recipemap.quantum_circuit_assembler.name=Quantum Circuit Assembling
 recipemap.precise_assembler.name=Precise Assembling
-recipemap.polymerization_tank.name=Polymeriztaion Tank
+recipemap.polymerization_tank.name=Polymerization Tank
 recipemap.neutron_accelerator.name=Neutron Accelerator
 recipemap.dilution_tank.name=Dilution 
 recipemap.dissolution_tank.name=Dissolution
@@ -1741,4 +1741,5 @@ fluid.trichloroflerane=Trichloroflerane
 fluid.chloronaquadic_acid=Chloronaquadic Acid
 fluid.very_hot_aqua_regia=Very Hot Aqua Regia
 item.contenttweaker.engraved_spinorial_memory_wafer.name=Engraved Spinorial Memory Wafer
-
+multiblocktweaker.machine.large_fluid_driller.name=Large Fluid Driller
+recipemap.large_fluid_driller.name=Fluid Drilling
