--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1743,3 +1743,4 @@ fluid.very_hot_aqua_regia=Very Hot Aqua Regia
 item.contenttweaker.engraved_spinorial_memory_wafer.name=Engraved Spinorial Memory Wafer
 multiblocktweaker.machine.large_fluid_driller.name=Large Fluid Driller
 recipemap.large_fluid_driller.name=Fluid Drilling
+tile.corn_bush.name=Corn Bush
