--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1733,9 +1733,9 @@ item.contenttweaker.flerovium_layerd_wafer.name=Flerovium Layered Wafer
 item.contenttweaker.spinorial_memory_wafer.name=Spinorial Memory Wafer
 item.contenttweaker.pre_engraved_nqo2_wafer.name=Pre-Engraved NqO2 Wafer
 item.contenttweaker.enriched_naquadah_photlithography_mask.name=Enriched Naquadah Photolithography Mask
-item.contenttweaker.raw_asoc_wafer.name=Raw ASoC Wafer
+item.contenttweaker.raw_asoc_wafer.name=Doped ASoC Wafer
 item.contenttweaker.engraved_asoc_wafer.name=Engraved ASoC Wafer
-item.contenttweaker.doped_aram_wafer.name=Doped ARAM Wafer
+item.contenttweaker.raw_aram_wafer.name=Doped ARAM Wafer
 fluid.very_hot_krypton=Very Hot Krypton
 fluid.trichloroflerane=Trichloroflerane
 fluid.chloronaquadic_acid=Chloronaquadic Acid
@@ -1744,3 +1744,5 @@ item.contenttweaker.engraved_spinorial_memory_wafer.name=Engraved Spinorial Memo
 multiblocktweaker.machine.large_fluid_driller.name=Large Fluid Driller
 recipemap.large_fluid_driller.name=Fluid Drilling
 tile.corn_bush.name=Corn Bush
+metaitem.muddy_monazite_ore_byproducts.name=Muddy Monazite Ore Byproducts
+metaitem.high_purity_arsenic.name=High Purity Arsenic
