--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1745,4 +1745,31 @@ multiblocktweaker.machine.large_fluid_driller.name=Large Fluid Driller
 recipemap.large_fluid_driller.name=Fluid Drilling
 tile.corn_bush.name=Corn Bush
 metaitem.muddy_monazite_ore_byproducts.name=Muddy Monazite Ore Byproducts
-metaitem.high_purity_arsenic.name=High Purity Arsenic
+metaitem.high_purity_arsenic.name=High Purity Arsenic Dust
+metaitem.nickel_nitride.name=Nickel Nitride Dust
+metaitem.ruby_leach.name=Ruby Leach Dust
+fluid.monazite_ore_byproduct_slurry=Monazite Ore Byproduct Slurry
+fluid.n-decanol=n-Decanol
+fluid.superfluid_helium_4=Superfluid Helium-4
+fluid.caprylic_acid=Caprylic Acid
+fluid.1_amidol_ethyl_2_alkyl_2_imidazoline=1-Amidol Ethyl 2-Alkyl 2-Imidazoline
+fluid.diluted_neodymium_rich_moanzite_solution=Diluted Neodymium Rich Monazite Solution
+fluid.ruby_solution=Ruby Solution
+fluid.methyl_isobutyl_carbonyl=Methy Isobutyl Carbonyl 
+fluid.arsenic_trichloride=Arsenic Trichloride
+fluid.liquid_enriched_helium_4=Liquid Enriched Helium-4
+fluid.neodymium_pre_extract_emulsion=Neodymium Pre-Extract Emulsion
+fluid.n-dodecanol=N-Dodecanol
+fluid.liquid_salt=Salt
+fluid.very_hot_xenon=Very Hot Xenon
+fluid.helium_4=Helium-4
+fluid.palmatic_acid=Palmatic Acid
+fluid.neodymium_rich_monazite_solution
+fluid.liquid_cryolite=Cryolite
+fluid.hotic2coolant=Hot IC2 Coolant
+fluid.impure_monazite_ore_byproduct_slurry=Impure Monazite Ore Byproduct Slurry
+fluid.n-hexadecanol=n-Hexadecanol
+fluid.ziegler_alfol_mixture=Ziegler Alfol Mixture
+fluid.n-tetradecanol=n-Tetradecanol
+item.contenttweaker.soc_lithography_mask.name=SoC Lithography Mask
+
