--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1772,4 +1772,4 @@ fluid.n-hexadecanol=n-Hexadecanol
 fluid.ziegler_alfol_mixture=Ziegler Alfol Mixture
 fluid.n-tetradecanol=n-Tetradecanol
 item.contenttweaker.soc_lithography_mask.name=SoC Lithography Mask
-
+item.contenttweaker.hot_silicon_ingot.name=Hot Silicon Ingot
