--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1729,10 +1729,8 @@ item.contenttweaker.nand_photolithography_mask.name=NAND Photolithography Mask
 item.contenttweaker.nickel_nitride_wafer.name=Nickel Nitride Wafer
 item.contenttweaker.engraved_nor_wafer.name=Engraved NOR Wafer
 item.contenttweaker.engraved_nand_wafer.name=Engraved NAND Wafer
-item.contenttweaker.flerovium_layerd_wafer.name=Flerovium Layered Wafer
 item.contenttweaker.spinorial_memory_wafer.name=Spinorial Memory Wafer
 item.contenttweaker.pre_engraved_nqo2_wafer.name=Pre-Engraved NqO2 Wafer
-item.contenttweaker.enriched_naquadah_photlithography_mask.name=Enriched Naquadah Photolithography Mask
 item.contenttweaker.raw_asoc_wafer.name=Doped ASoC Wafer
 item.contenttweaker.engraved_asoc_wafer.name=Engraved ASoC Wafer
 item.contenttweaker.raw_aram_wafer.name=Doped ARAM Wafer
@@ -1773,3 +1771,94 @@ fluid.ziegler_alfol_mixture=Ziegler Alfol Mixture
 fluid.n-tetradecanol=n-Tetradecanol
 item.contenttweaker.soc_lithography_mask.name=SoC Lithography Mask
 item.contenttweaker.hot_silicon_ingot.name=Hot Silicon Ingot
+item.contenttweaker.trenched_naquadah_dioxide_wafer.name=Trenched Naquadah Dioxide Wafer
+item.contenttweaker.soc_wafer_base.name=SoC Wafer Base
+item.contenttweaker.engraved_soc_wafer.name=Engraved SoC Wafer
+item.contenttweaker.uhasoc_lithography_mask.name=UHaSoC Lithography Mask
+item.contenttweaker.shaped_high_energy_gamma_shield.name=Shaped High Energy Gamma
+item.contenttweaker.pre_engraved_uhasoc_wafer.name=Pre-Engraved UHaSoC
+item.contenttweaker.superconductor_layered_uhasoc_wafer.name=Superconductor Layered UHaSoC Wafer
+item.contenttweaker.degenerate_uhasoc_wafer.name=Degenerate UHaSoC Wafer
+item.contenttweaker.controlled_shaped_naquadah_charge.name=Controlled Shaped Naquadah Charge
+item.contenttweaker.celled_uhasoc_wafer.name=Celled UHaSoC Wafer
+item.contenttweaker.spin_aligned_celled_uhasoc_wafer.name=Spin-Aligned Celled UHaSoC Wafer
+item.contenttweaker.uhasoc_post_engraving_mask.name=UHaSoC Post Engraving Mask
+item.contenttweaker.relayered_uhasoc_wafer.name=Relayered UHaSoC Wafer
+item.contenttweaker.fully_connected_uhasoc_wafer.name=Fully Connected UHaSoC Wafer
+item.contenttweaker.monocrystalline_indium_phosphide_seed_crystal.name=Monocrystalline Indium Phosphide Seed Crystal
+item.contenttweaker.monocrystalline_indium_phosphide_boule.name=Monocrystalline Indium Phosphide Boule
+item.contenttweaker.monocrystalline_indium_phosphide_ingot.name=Monocrystalline Indium Phosphide Ingot
+item.contenttweaker.indium_phosphide_wafer.name=Indium Phosphide Wafer
+item.contenttweaker.optical_lithography_mask.name=Optical Lithography Mask
+item.contenttweaker.zblan_layered_inp_wafer.name=ZBLAN Layered InP Wafer
+item.contenttweaker.interconnected_inp_wafer.name=Interconnected InP Wafer
+item.contenttweaker.resonant_inp_wafer.name=Resonant InP Wafer
+item.contenttweaker.insulated_inp_wafer.name=Insulated InP Wafer
+item.contenttweaker.re_exposed_inp_wafer.name=Re-Exposed InP Wafer
+item.contenttweaker.electroluminescent_inp_wafer.name=Electroluminescent Wafer
+item.contenttweaker.recoated_inp_wafer.name=Recoated InP Wafer
+item.contenttweaker.contact_ready_inp_wafer.name=Contact Ready InP Wafer
+item.contenttweaker.uninsulated_optical_soc.name=Uninsulated Optical SoC
+item.contenttweaker.contactless_optical_soc.name=Contactless Optical SoC
+item.contenttweaker.insulated_optical_soc.name=Insulated Optical SoC
+item.contenttweaker.neurological_life_support_unit.name=Neurological Life Support
+item.contenttweaker.sapphire_seed_crystal.name=Sapphire Seed Crystal
+item.contenttweaker.sapphire_boule.name=Sapphire Boule
+item.contenttweaker.monocrystalline_sapphire_ingot.name=Monocrystalline Sapphire Ingot
+item.contenttweaker.sapphire_wafer.name=Sapphire Wafer
+item.contenttweaker.qubit_cpu_lithography_mask.name=QBit CPU Lithography Mask
+item.contenttweaker.engraved_qbit_cpu_wafer.name=Engraved QBit CPU Wafer
+item.contenttweaker.raw_qbit_cpu_wafer.name=Raw QBit COU Wafer
+item.contenttweaker.superconductor_coated_qbit_cpu_wafer.name=Superconductor Coated QBit Wafer
+item.contenttweaker.u240_electron_source.name=U-240 Electron Source
+item.contenttweaker.qbit_cpu_die.name=QBit CPU Die
+item.contenttweaker.covered_qbit_cpu.name=Covered QBit CPU
+metaitem.indium_chloride.name=Indium Chloride Dust
+metaitem.vanadium_trichloride.name=Vanadium Trichloride
+metaitem.nanotube_deposition_mix.name=Nanotube Deposition Mix
+metaitem.doped_nanotube_deposition_mix.name=Doped Nanotube Deposition Mix
+metaitem.nanotube_insulation_deposition_mix.name=Doped Nanotube Deposition Mix
+metaitem.dielectric_mirror_formation_mix.name=Doped Nanotube Deposition Mix
+metaitem.doped_carbon_nanotubes.name=Doped Carbon Nanotubes
+fluid.diluted_neodymium_rich_monazite_solution=Diluted Neodymium Rich Monazite Solution
+fluid.vanadium_tetrochloride=Vanadium Tetrochloride
+fluid.neodymium_rich_monazite_solution=Neodymium Rich Monazite Solution
+fluid.naquadah_rich_sterile_growth_medium=Naquadah Rich Sterile Growth Medium
+fluid.liquid_helium_4=Liquid Helium 4
+item.contenttweaker.supercooled_uhasoc_wafer.name=Supercooled UHaSoC
+item.contenttweaker.doped_soc_wafer.name=Doped SoC Wafer
+item.contenttweaker.oganesson_seed_crystal.name=Oganesson Seed Crystal
+item.contenttweaker.oganesson_boule.name=Oganesson Boule
+item.contenttweaker.hasoc_lithography_mask.name=HASoC Lithography Mask
+item.contenttweaker.monocrystalline_oganesson_ingot.name=Monocrystalline Oganesson Ingot
+item.contenttweaker.oganesson_wafer.name=Oganesson Wafer
+item.contenttweaker.treated_oganesson_wafer.name=Treated Oganesson Wafer
+item.contenttweaker.pre_engraving_oganesson_lithography_mask.name=
+item.contenttweaker.pre_engraved_oganesson_wafer.name=Pre-Engraved Oganesson Wafer
+item.contenttweaker.raw_oganesson_wafer.name=Raw Oganesson Wafer
+item.contenttweaker.doped_oganesson_wafer.name=Doped Oganesson Wafer
+item.contenttweaker.engraved_hasoc_wafer.name=Engraved HASoC Wafer
+item.contenttweaker.bathed_treated_oganesson_wafer.name=Bathed Treated Oganesson Wafer
+item.contenttweaker.hasoc_die.name=HASoC Die
+item.contenttweaker.unpolarized_hasoc_wafer.name=Unpolarized HASoC Wafer
+item.contenttweaker.biosafe_protective_plating.name=Biosafe Protective Plating
+item.contenttweaker.clean_hasoc_die.name=Clean HASoC Die
+item.contenttweaker.neural_implanted_hasoc_die.name=Neural Implanted HASoC
+item.contenttweaker.grown_hasoc_die.name=Grown HASoC Die
+item.contenttweaker.raw_soc_wafer.name=Raw SoC Wafer
+item.contenttweaker.unbaked_monocrystalline_silicon_boule.name=Unbaked Monocrystalline Silicon Boule
+item.contenttweaker.doped_aram_wafer.name=Doped ARAM Wafer
+item.contenttweaker.naquadah_dioxide_seed_crystal.name=Naquadah Dioxide Seed Crystal
+item.contenttweaker.flerovium_layered_wafer.name=Flerovium Layered Wafer
+item.contenttweaker.naquadah_dioxide_wafer.name=Naquadah Dioxide Wafer
+item.contenttweaker.naquadah_dioxide_boule.name=Naquadah Dioxide Boule
+item.contenttweaker.enriched_naquadah_photolithography_mask.name=Enriched Naquadah Photolithography Mask
+
+
+
+
+
+
+
+
+
