--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -89,7 +89,10 @@ material.gadolinite=Gadolinite
 material.xenotime=Xenotime
 material.bscco=BSCCO
 material.deshite=Deshite
-material.naquadah_dioxide.name=Naquadah Dioxide
+material.naquadah_dioxide=Naquadah Dioxide
+material.electron_degenerate_rhenium=Electron Degenerate Rhenium
+
+
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
