Texture Time Part 6

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1856,7 +1856,7 @@ item.contenttweaker.enriched_naquadah_photolithography_mask.name=Enriched Naquad
 tile.contenttweaker.extreme_outer_protective_wall.name=Extreme Outer Protective Wall
 tile.contenttweaker.t4_rocket_engine.name=T4 Rocket Engine
 tile.contenttweaker.extreme_rocket_thruster.name=Extreme Rocket Thruster
-
+item.contenttweaker.trenched_superconductor_layered_uhasoc_wafer.name=Trenched Superconductor Layered UHaSoC Wafer
 
 
 
