--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1774,8 +1774,8 @@ item.contenttweaker.hot_silicon_ingot.name=Hot Silicon Ingot
 item.contenttweaker.trenched_naquadah_dioxide_wafer.name=Trenched Naquadah Dioxide Wafer
 item.contenttweaker.soc_wafer_base.name=SoC Wafer Base
 item.contenttweaker.engraved_soc_wafer.name=Engraved SoC Wafer
-item.contenttweaker.uhasoc_lithography_mask.name=UHaSoC Lithography Mask
-item.contenttweaker.shaped_high_energy_gamma_shield.name=Shaped High Energy Gamma
+item.contenttweaker.uhasoc_lithography_mask.name=UHaSoC Lithography Mask 
+item.contenttweaker.shaped_high_energy_gamma_shield.name=Shaped High Energy Gamma Shield
 item.contenttweaker.pre_engraved_uhasoc_wafer.name=Pre-Engraved UHaSoC
 item.contenttweaker.superconductor_layered_uhasoc_wafer.name=Superconductor Layered UHaSoC Wafer
 item.contenttweaker.degenerate_uhasoc_wafer.name=Degenerate UHaSoC Wafer
