--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1857,7 +1857,7 @@ tile.contenttweaker.extreme_outer_protective_wall.name=Extreme Outer Protective 
 tile.contenttweaker.t4_rocket_engine.name=T4 Rocket Engine
 tile.contenttweaker.extreme_rocket_thruster.name=Extreme Rocket Thruster
 item.contenttweaker.trenched_superconductor_layered_uhasoc_wafer.name=Trenched Superconductor Layered UHaSoC Wafer
-
+item.contenttweaker.seared_gear.name=Seared Gear
 
 
 
